--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
     background-color: rgba(0, 0, 0, 0.4);
     display: none;
 }
+
 .popup-content {
     background-color: white;
     margin: 10% auto;
@@ -123,7 +124,7 @@ body {
     border: 1px solid #888888;
     width: 30%;
     font-weight: bolder;
-    height: 200px;
+    height: 60%;
     padding: 16px;
     outline: none;
     resize: none;
@@ -163,7 +164,7 @@ body {
     right: 2vh;
 }
 
-.popup-content button:hover  {
+.popup-content button:hover {
     color: #4D5E81;
     background-color: #FFF;
 }
@@ -196,4 +197,104 @@ a {
 
 ::-webkit-scrollbar-thumb {
     background: #4D5E81;
+}
+
+@media (max-width: 480px) {
+    body {
+        background-image: url('../assets/bg_phone.svg');
+        background-size: cover;
+    }
+
+    .title h1 {
+        font-size: 35px;
+        margin-left: 5vh;
+        margin-top: 4vh;
+    }
+
+    .title h2 {
+        font-size: 18px;
+        margin-left: 5vh;
+    }
+
+    #info {
+        height: 5vh;
+        width: 5vh;
+        font-size: 25px;
+        font-weight: 500;
+        top: 4.5vh;
+        right: 4vh;
+    }
+
+    #container {
+        margin-left: 18%;
+    }
+
+    .popup {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: none;
+    }
+
+    .popup-content {
+        background-color: white;
+        margin: 45% auto;
+        padding: 20px;
+        border: 1px solid #888888;
+        width: 75%;
+        font-weight: bolder;
+        height: 50%;
+        padding: 16px;
+        outline: none;
+        resize: none;
+        font-size: 15px;
+        color: #FFF;
+        background: rgba(255, 255, 255, 0.25);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(17.5px);
+        -webkit-backdrop-filter: blur(17.5px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+    }
+
+    .popup-content p {
+        font-weight: 300;
+        margin-top: 2vh;
+    }
+
+    .popup-content button {
+        display: block;
+        margin: 0 auto;
+        height: 4vh;
+        width: 4vh;
+        border: none;
+        outline: none;
+        color: #FFF;
+        font-size: 18px;
+        font-weight: 500;
+        background: rgba(255, 255, 255, 0.25);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        backdrop-filter: blur(17.5px);
+        -webkit-backdrop-filter: blur(17.5px);
+        border-radius: 100px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        cursor: pointer;
+        position: absolute;
+        top: 2vh;
+        right: 2vh;
+    }
+
+    .popup-content button:hover {
+        color: #4D5E81;
+        background-color: #FFF;
+    }
+
+    .show {
+        display: block;
+    }
 }
